# botimint

./: .gitignore  Cargo.toml  README.md  TODO.md  example.env  flake.nix  justfile  rustc-ice-2023-11-11T01_23_36-74918.txt  rustc-ice-2023-11-11T01_23_36-74919.txt  rustc-ice-2023-11-11T02_40_31-87076.txt  rustc-ice-2023-11-11T02_40_31-87077.txt  rustc-ice-2023-11-11T02_40_38-87116.txt  rustc-ice-2023-11-11T02_40_38-87117.txt  rustc-ice-2023-11-11T02_41_32-87383.txt  rustc-ice-2023-11-11T02_41_32-87384.txt  rustc-ice-2023-11-11T02_41_42-87426.txt  rustc-ice-2023-11-11T02_41_42-87427.txt  rustc-ice-2023-11-11T02_41_54-87469.txt  rustc-ice-2023-11-11T02_41_54-87470.txt  rustc-ice-2023-11-11T02_42_01-87508.txt  rustc-ice-2023-11-11T02_42_01-87509.txt
.config/flakebox/: semgrep.yaml
.direnv/: flake-profile-1-link
src/: botimint.rs  config.rs  fedimint_local.rs  lightning.rs  main.rs  state.rs  utils.rs
src/commands/: attachmentinput.rs  mod.rs  ping.rs  welcome.rs  wonderful_command.rs
src/commands/cln/: addgossip.rs  autoclean.rs  checkmessage.rs  close.rs  connect.rs  createinvoice.rs  createonion.rs  datastore.rs  decode.rs  decodepay.rs  deldatastore.rs  delexpiredinvoice.rs  delinvoice.rs  disconnect.rs  feerates.rs  fundchannel.rs  fundpsbt.rs  get_connection_string.rs  getroute.rs  info.rs  invoice.rs  keysend.rs  listchannels.rs  listclosedchannels.rs  listdatastore.rs  listforwards.rs  listfunds.rs  listhtlcs.rs  listinvoices.rs  listnodes.rs  listpays.rs  listpeerchannels.rs  listpeers.rs  listsendpays.rs  listtransactions.rs  mod.rs  newaddr.rs  pay.rs  ping.rs  preapproveinvoice.rs  (+19 more)
src/commands/custom/: mod.rs  ping.rs
src/commands/fed/: backup.rs  config.rs  discover_version.rs  info.rs  list_operations.rs  mod.rs
src/commands/fed/ln/: await_invoice.rs  await_pay.rs  invoice.rs  list_gateways.rs  mod.rs  pay.rs  switch_gateway.rs
src/commands/fed/mint/: mod.rs  reissue.rs  spend.rs  split.rs  validate.rs
src/commands/fed/wallet/: await_deposit.rs  deposit_address.rs  mod.rs  withdraw.rs
src/commands/fedimint-todo/wallet/: deposit_address.rs  withdraw.rs
src/commands/fm/: id.rs  mod.rs
src/utils/: address_utils.rs  discord_utils.rs  get_option_as.rs  mod.rs  option_utils.rs
