[package]
name = "botimint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.190"
dotenv = "0.15.0"
tracing-subscriber = "0.3.17"
cln-rpc = "0.1.6"
fedimint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.0" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.3" }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.3" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.3" }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.1.3" }

[workspace.dependencies]
threshold_crypto = { git = "https://github.com/fedimint/threshold_crypto" }

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/dpc/rust-secp256k1-zkp/", branch = "sanket-pr" }
ring = { git = "https://github.com/dpc/ring", rev = "5493e7e76d0d8fb1d3cbb0be9c4944700741b802" }
