[package]
name = "botimint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.190"
dotenv = "0.15.0"
tracing-subscriber = "0.3.17"
cln-rpc = "0.1.6"
lightning-invoice = "0.26.0"
fedimint-client = "0.2.1"
fedimint-core = "0.2.1"
fedimint-wallet-client = "0.2.1"
fedimint-mint-client = "0.2.1"
fedimint-ln-client = "0.2.1"
fedimint-rocksdb = "0.2.1"
lazy_static = "1.4.0"
serde_json = "1.0.108"
regex = "1.10.2"
hex = "0.4.3"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
time = { version = "0.3.25", features = ["formatting"] }


# [patch.crates-io]
# secp256k1-zkp = { git = "https://github.com/dpc/rust-secp256k1-zkp/", branch = "sanket-pr" }
# ring = { git = "https://github.com/dpc/ring", rev = "5493e7e76d0d8fb1d3cbb0be9c4944700741b802" }

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
